[package]
name = "uc_mpt"
version = "4.0.0"
authors = []
description = "Modified Patricia Tree (aka Trie)."
license = "Apache-2.0"
edition = "2021"
keywords = ["patricia", "mpt", "evm", "trie", "ethereum"]

[dependencies]
parking_lot = "0.12"
rlp = "0.5"
blake3 = "1.3"

[dev-dependencies]
rand = "0.7"
hex = "0.4"
criterion = "0.3"
ethereum-types = "0.14"
uuid = { version = "1.1", features = ["serde", "v4"] }

[[bench]]
name = "trie"
harness = false
